--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Calcoolator</title>
+  <meta name="description" content="Kalkulator yang bisa menghitung jumlah utang kalian sampai hari kiamat. Wkwk. btw ndang dibayar">
+  <meta name="keywords" content="kalkulator online, kalkulator modern, kalkulator masa depan">
+  <meta name="author" content="Rickthor7">
+  <title>Calcoolator Modern</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="theme-color" content="hsl(230, 30%, 20%)"><link rel="stylesheet" href="./style.css">
 
@@ -17,3 +20,4 @@
 
 </body>
 </html>
+        
